--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "14.2.4",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.4",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
