--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "swiper": "^11.1.4",
     "swr": "^2.2.5"
   },
