--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
@@ -22,6 +23,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
