--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-scroll-to-top": "^3.0.0",
+    "smooth-scrollbar": "^8.8.4",
+    "smooth-scrollbar-react": "^2.4.1",
     "swiper": "^11.1.4",
     "swr": "^2.2.5"
   },
