--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.5",
     "@vercel/speed-insights": "^1.0.12",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
